Added OHOLCurse button on main menu

--- a/gameSource/languages/English.txt
+++ b/gameSource/languages/English.txt
@@ -48,6 +48,7 @@ loginButton "LOGIN"
 friendsButton "FRIENDS"
 familyTrees "FAMILY TREES"
 techTree "TECH"
+oholCurseButton "OHOLCURSE"
 genesButton "GENES"
 geneticHistoryButton "GENETIC HISTORY"
 
